# jjs_creno_project

./: README.md
3D_model/container/: container.stl
3D_model/grip/: P1-GripperHandC2v3-1.stl
CAM_SRC/: cam_80.sh  cam_81.sh
Crane_SRC/Mega_Code(Not_Used)/: Mega_Code.ino
Crane_SRC/OpenCR_Code/: OpenCR_Code.ino
Crane_SRC/Uno_Code/: Uno_Code.ino
Dynamixel/Dynamixel_Floor_calc/: Dynamixel_Floor_calc.ino
Dynamixel/Dynamixel_Ros/: Dynamixel_Ros.ino
Dynamixel/Mega_Ros_withOpenCR/: Mega_Ros_withOpenCR.ino
Dynamixel/crane_dynamixel/: crane_dynamixel.ino
Dynamixel/crane_servo/: crane_servo.ino
Dynamixel/crane_servo2/: crane_servo2.ino
Dynamixel/dynamixelPositionMode/: dynamixelPositionMode.ino
Firmware/: Step_Control.cpp
Firmware/Crane_MainCode/: Crane_MainCode_0.0.1.cpp  Crane_MainCode_0.0.2.cpp  Crane_Mega_Code_0.1.0.cpp  Crane_OpenCR_Code.cpp  Crane_OpenCR_Code_0.0.3.cpp
Flutter_SRC/lib/: generated_plugin_registrant.dart  login.dart  (+2 more)
OpenCVCourse_MS/: Chapter4.cpp  Chapter6.cpp  Chapter7.cpp  OpenCVCourse.vcxproj.filters
QT_study/: QtTestWebView.tar  opencvCam.tar
ROS_SRC/ros_server_topic/: .package.xml.swp  CMakeLists.txt  package.xml
ROS_SRC/ros_server_topic/src/: chat_client.cpp
Server_SRC/: Makefile  Server.cpp  client_DB.cpp
flutter_client/: main.dart  pubspec.yaml
flutter_src/: README.md  pubspec.yaml
flutter_streaming/: db.dart  login.dart  main.dart  pubspec.yaml
jetson nano/: .ICEauthority  .bash_history
jetson_ros/: Subscriber.cpp
raspberry pi/: .Xauthority  .bash_history  .xsession-errors  .xsession-errors.old
(+4681 files in other folders)
